--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>React ToDos App</title>
+    <title>Invoice App</title>
+    <link rel="stylesheet" href="src/css/main.css">
 </head>
 <body>
     <div id="app" />
