--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>React ToDos App</title>
+    <title>Invoice App</title>
 </head>
 <body>
     <div id="app" />
